// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`authenticator-enroll-security-question custom question fails client side validation when custom question is missing 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="auth-container main-container MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="okta-sign-in-header auth-header authCoinSpacing MuiBox-root emotion-6"
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                />
                <div
                  aria-hidden="true"
                  class="mfa-okta-security-question MuiBox-root emotion-8"
                  data-se="factor-beacon"
                >
                  <svg
                    aria-labelledby="mfa-okta-security-question"
                    fill="none"
                    height="48"
                    role="img"
                    viewBox="0 0 48 48"
                    width="48"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title
                      id="mfa-okta-security-question"
                    >
                      Security Question
                    </title>
                    <circle
                      class="siwFillBg"
                      cx="24"
                      cy="24"
                      fill="#F5F5F6"
                      r="24"
                    />
                    <path
                      class="siwFillSecondary"
                      d="m24.25 39.123-4.615-3.433a21.799 21.799 0 0 1-8.827-16.259l-.329-5.738 12.84-4.534a2.818 2.818 0 0 1 1.862 0l12.84 4.534-.329 5.738a21.8 21.8 0 0 1-8.827 16.259l-4.615 3.433ZM11.521 14.387l.285 4.987a20.811 20.811 0 0 0 8.425 15.514l4.019 2.989 4.019-2.989a20.81 20.81 0 0 0 8.425-15.514l.285-4.987L24.848 10.1a1.792 1.792 0 0 0-1.2 0l-12.127 4.287Z"
                      fill="#A7B5EC"
                    />
                    <path
                      class="siwFillPrimaryDark"
                      d="M29.44 19.729a5.007 5.007 0 0 0-8.846-2.356 4.484 4.484 0 0 0-.827 4.385l.929-.367A3.48 3.48 0 0 1 21.369 18a4.027 4.027 0 1 1 5.244 5.972C25 25 23.5 26.252 23.5 28.528h1c0-1.691 1.058-2.7 2.646-3.707a5.067 5.067 0 0 0 2.294-5.092Zm-5.454 12.246a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5Z"
                      fill="#00297A"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-9"
              >
                <div
                  class="identifier-container MuiBox-root emotion-10"
                >
                  <div
                    class="MuiBox-root emotion-11"
                  >
                    <span
                      class="MuiBox-root emotion-12"
                    >
                      <svg
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-13"
                        fill="none"
                        focusable="false"
                        role="img"
                        viewBox="0 0 16 16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M10 3V5C10 6.10457 9.10457 7 8 7C6.89543 7 6 6.10457 6 5V3C6 1.89543 6.89543 1 8 1C9.10457 1 10 1.89543 10 3ZM5 3C5 1.34315 6.34315 0 8 0C9.65685 0 11 1.34315 11 3V5C11 6.65685 9.65685 8 8 8C6.34315 8 5 6.65685 5 5V3ZM4.1305 10.0742C4.26803 10.0181 4.459 10 5.41376 10H10.5862C11.541 10 11.732 10.0181 11.8695 10.0742C12.0299 10.1398 12.1706 10.2459 12.2777 10.3821C12.3695 10.4989 12.4393 10.6776 12.7016 11.5956L13.6743 15H2.32573L3.29841 11.5956C3.5607 10.6776 3.63054 10.4989 3.72233 10.3821C3.82941 10.2459 3.97006 10.1398 4.1305 10.0742ZM13.6631 11.3209L14.7143 15L15 16H13.96H2.04002H1L1.28571 15L2.33689 11.3209C2.57458 10.489 2.69343 10.073 2.93606 9.76423C3.15022 9.49171 3.43152 9.27953 3.75239 9.14848C4.11592 9 4.54854 9 5.41376 9H10.5862C11.4515 9 11.8841 9 12.2476 9.14848C12.5685 9.27953 12.8498 9.49171 13.0639 9.76423C13.3066 10.073 13.4254 10.489 13.6631 11.3209Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                        <title>
                          User
                        </title>
                      </svg>
                    </span>
                    <span
                      class="identifier no-translate MuiBox-root emotion-14"
                      data-se="identifier"
                      title="tester14@test.com"
                    >
                      tester14@test.com
                    </span>
                  </div>
                </div>
                <form
                  class="o-form MuiBox-root emotion-15"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-16"
                  >
                    <div
                      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-infoboxError MuiAlert-infobox emotion-17"
                      role="alert"
                    >
                      <div
                        class="MuiAlert-icon emotion-18"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-19"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 16 16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M13.983 14.6471C13.4706 15 12.6329 15 10.9575 15H5.04248C3.36707 15 2.52937 15 2.01699 14.6471C1.56939 14.3387 1.26655 13.8615 1.17816 13.3252C1.07698 12.7114 1.43367 11.9534 2.14706 10.4374L5.10455 4.15277C6.02878 2.18879 6.49089 1.2068 7.12576 0.898255C7.6777 0.630012 8.32225 0.630012 8.87419 0.898255C9.50906 1.2068 9.97117 2.18879 10.8954 4.15277L13.8529 10.4374C14.5663 11.9534 14.923 12.7114 14.8218 13.3252C14.7334 13.8615 14.4306 14.3387 13.983 14.6471ZM7.99998 10C7.72383 10 7.49998 9.77614 7.49998 9.5L7.49998 5H8.49998L8.49998 9.5C8.49998 9.77614 8.27612 10 7.99998 10ZM7.99998 13C8.14831 13 8.29332 12.956 8.41665 12.8736C8.53999 12.7912 8.63612 12.6741 8.69288 12.537C8.74965 12.4 8.7645 12.2492 8.73556 12.1037C8.70662 11.9582 8.6352 11.8246 8.53031 11.7197C8.42542 11.6148 8.29178 11.5434 8.14629 11.5144C8.00081 11.4855 7.85001 11.5003 7.71296 11.5571C7.57592 11.6139 7.45878 11.71 7.37637 11.8333C7.29396 11.9567 7.24998 12.1017 7.24998 12.25C7.24998 12.4489 7.32899 12.6397 7.46964 12.7803C7.6103 12.921 7.80106 13 7.99998 13Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                      <div
                        class="MuiAlert-message emotion-20"
                      >
                        We found some errors. Please review the form and make corrections.
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-21"
                  >
                    <div
                      class="MuiBox-root emotion-21"
                    >
                      <div
                        class="MuiBox-root emotion-23"
                      >
                        <div
                          class="MuiBox-root emotion-24"
                        >
                          <h2
                            class="MuiTypography-root MuiTypography-h4 emotion-25"
                            data-se="o-form-head"
                            id="enroll-authenticator_Title_Set_up_security_question_security_question_aut2h3fft3N1BApga1d7_7_2"
                            tabindex="-1"
                          >
                            Set up security question
                          </h2>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-23"
                      >
                        <fieldset
                          class="MuiFormControl-root MuiFormControl-marginNormal emotion-27"
                        >
                          
                          <div
                            class="MuiFormGroup-root emotion-28"
                            role="radiogroup"
                          >
                            <label
                              class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-29"
                            >
                              <span
                                class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-root MuiRadio-colorPrimary emotion-30"
                              >
                                <input
                                  class="PrivateSwitchBase-input emotion-31"
                                  name="questionType"
                                  type="radio"
                                  value="predefined"
                                />
                                <span
                                  class="emotion-32"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-33"
                                    data-testid="RadioButtonUncheckedIcon"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                                    />
                                  </svg>
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-34"
                                    data-testid="RadioButtonCheckedIcon"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                                    />
                                  </svg>
                                </span>
                              </span>
                              <span
                                class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-35"
                              >
                                Choose a security question
                              </span>
                            </label>
                            <label
                              class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-29"
                            >
                              <span
                                class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary Mui-checked MuiRadio-root MuiRadio-colorPrimary emotion-30"
                              >
                                <input
                                  class="PrivateSwitchBase-input emotion-31"
                                  name="questionType"
                                  type="radio"
                                  value="custom"
                                />
                                <span
                                  class="emotion-32"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-33"
                                    data-testid="RadioButtonUncheckedIcon"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                                    />
                                  </svg>
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-41"
                                    data-testid="RadioButtonCheckedIcon"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                                    />
                                  </svg>
                                </span>
                              </span>
                              <span
                                class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-35"
                              >
                                Create my own security question
                              </span>
                            </label>
                          </div>
                        </fieldset>
                      </div>
                      <div
                        class="MuiBox-root emotion-23"
                      >
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          <label
                            class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-45"
                            data-shrink="false"
                            for="credentials.question"
                          >
                            Create my own security question
                          </label>
                          <div
                            class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth emotion-46"
                            required="true"
                          >
                            <input
                              aria-describedby=" credentials.question-error  "
                              aria-invalid="true"
                              autocomplete="off"
                              class="MuiInputBase-input emotion-47"
                              data-se="credentials.question"
                              id="credentials.question"
                              name="credentials.question"
                              required=""
                              type="text"
                            />
                          </div>
                          <div
                            class="MuiBox-root emotion-2"
                          >
                            <p
                              class="MuiFormHelperText-root Mui-error emotion-49"
                              data-se="credentials.question-error"
                              id="credentials.question-error"
                              role="alert"
                            >
                              This field cannot be left blank
                            </p>
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-23"
                      >
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          <label
                            class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-45"
                            data-shrink="false"
                            for="credentials.answer"
                          >
                            Answer
                          </label>
                          <div
                            class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-adornedEnd no-translate emotion-46"
                            required="true"
                          >
                            <input
                              aria-invalid="false"
                              class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-47"
                              data-se="credentials.answer"
                              id="credentials.answer"
                              name="credentials.answer"
                              required=""
                              type="password"
                            />
                            <div
                              class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined emotion-55"
                            >
                              <button
                                aria-controls="credentials.answer"
                                aria-label="Show answer"
                                aria-pressed="false"
                                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium emotion-56"
                                data-mui-internal-clone-element="true"
                                tabindex="0"
                                type="button"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-19"
                                  fill="none"
                                  focusable="false"
                                  viewBox="0 0 16 16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M3.89765 11.5506C2.89626 10.6994 2.04176 9.50056 1.15617 8C2.04176 6.49944 2.89626 5.30062 3.89765 4.44944C4.96916 3.53865 6.24031 3 8 3C9.75969 3 11.0308 3.53865 12.1024 4.44944C13.1037 5.30062 13.9582 6.49944 14.8438 8C13.9582 9.50056 13.1037 10.6994 12.1024 11.5506C11.0308 12.4613 9.75969 13 8 13C6.24031 13 4.96916 12.4613 3.89765 11.5506ZM8 14C12 14 14 11.5 16 8C14 4.5 12 2 8 2C4 2 2 4.5 0 8C2 11.5 4 14 8 14ZM11 8C11 9.65685 9.65685 11 8 11C6.34315 11 5 9.65685 5 8C5 6.34315 6.34315 5 8 5C9.65685 5 11 6.34315 11 8ZM12 8C12 10.2091 10.2091 12 8 12C5.79086 12 4 10.2091 4 8C4 5.79086 5.79086 4 8 4C10.2091 4 12 5.79086 12 8Z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-23"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-59"
                          data-type="save"
                          tabindex="0"
                          type="submit"
                        >
                          Verify
                        </button>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-23"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-61"
                        data-se="switchAuthenticator"
                        role="link"
                        type="button"
                      >
                        Return to authenticator list
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-23"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-61"
                        data-se="cancel"
                        role="link"
                        type="button"
                      >
                        Back to sign in
                      </button>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`authenticator-enroll-security-question custom question renders correct form 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="auth-container main-container MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="okta-sign-in-header auth-header authCoinSpacing MuiBox-root emotion-6"
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                />
                <div
                  aria-hidden="true"
                  class="mfa-okta-security-question MuiBox-root emotion-8"
                  data-se="factor-beacon"
                >
                  <svg
                    aria-labelledby="mfa-okta-security-question"
                    fill="none"
                    height="48"
                    role="img"
                    viewBox="0 0 48 48"
                    width="48"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title
                      id="mfa-okta-security-question"
                    >
                      Security Question
                    </title>
                    <circle
                      class="siwFillBg"
                      cx="24"
                      cy="24"
                      fill="#F5F5F6"
                      r="24"
                    />
                    <path
                      class="siwFillSecondary"
                      d="m24.25 39.123-4.615-3.433a21.799 21.799 0 0 1-8.827-16.259l-.329-5.738 12.84-4.534a2.818 2.818 0 0 1 1.862 0l12.84 4.534-.329 5.738a21.8 21.8 0 0 1-8.827 16.259l-4.615 3.433ZM11.521 14.387l.285 4.987a20.811 20.811 0 0 0 8.425 15.514l4.019 2.989 4.019-2.989a20.81 20.81 0 0 0 8.425-15.514l.285-4.987L24.848 10.1a1.792 1.792 0 0 0-1.2 0l-12.127 4.287Z"
                      fill="#A7B5EC"
                    />
                    <path
                      class="siwFillPrimaryDark"
                      d="M29.44 19.729a5.007 5.007 0 0 0-8.846-2.356 4.484 4.484 0 0 0-.827 4.385l.929-.367A3.48 3.48 0 0 1 21.369 18a4.027 4.027 0 1 1 5.244 5.972C25 25 23.5 26.252 23.5 28.528h1c0-1.691 1.058-2.7 2.646-3.707a5.067 5.067 0 0 0 2.294-5.092Zm-5.454 12.246a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5Z"
                      fill="#00297A"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-9"
              >
                <div
                  class="identifier-container MuiBox-root emotion-10"
                >
                  <div
                    class="MuiBox-root emotion-11"
                  >
                    <span
                      class="MuiBox-root emotion-12"
                    >
                      <svg
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-13"
                        fill="none"
                        focusable="false"
                        role="img"
                        viewBox="0 0 16 16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M10 3V5C10 6.10457 9.10457 7 8 7C6.89543 7 6 6.10457 6 5V3C6 1.89543 6.89543 1 8 1C9.10457 1 10 1.89543 10 3ZM5 3C5 1.34315 6.34315 0 8 0C9.65685 0 11 1.34315 11 3V5C11 6.65685 9.65685 8 8 8C6.34315 8 5 6.65685 5 5V3ZM4.1305 10.0742C4.26803 10.0181 4.459 10 5.41376 10H10.5862C11.541 10 11.732 10.0181 11.8695 10.0742C12.0299 10.1398 12.1706 10.2459 12.2777 10.3821C12.3695 10.4989 12.4393 10.6776 12.7016 11.5956L13.6743 15H2.32573L3.29841 11.5956C3.5607 10.6776 3.63054 10.4989 3.72233 10.3821C3.82941 10.2459 3.97006 10.1398 4.1305 10.0742ZM13.6631 11.3209L14.7143 15L15 16H13.96H2.04002H1L1.28571 15L2.33689 11.3209C2.57458 10.489 2.69343 10.073 2.93606 9.76423C3.15022 9.49171 3.43152 9.27953 3.75239 9.14848C4.11592 9 4.54854 9 5.41376 9H10.5862C11.4515 9 11.8841 9 12.2476 9.14848C12.5685 9.27953 12.8498 9.49171 13.0639 9.76423C13.3066 10.073 13.4254 10.489 13.6631 11.3209Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                        <title>
                          User
                        </title>
                      </svg>
                    </span>
                    <span
                      class="identifier no-translate MuiBox-root emotion-14"
                      data-se="identifier"
                      title="tester14@test.com"
                    >
                      tester14@test.com
                    </span>
                  </div>
                </div>
                <form
                  class="o-form MuiBox-root emotion-15"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-16"
                  >
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <div
                        class="MuiBox-root emotion-18"
                      >
                        <div
                          class="MuiBox-root emotion-19"
                        >
                          <h2
                            class="MuiTypography-root MuiTypography-h4 emotion-20"
                            data-se="o-form-head"
                            id="enroll-authenticator_Title_Set_up_security_question_security_question_aut2h3fft3N1BApga1d7_7_2"
                            tabindex="-1"
                          >
                            Set up security question
                          </h2>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-18"
                      >
                        <fieldset
                          class="MuiFormControl-root MuiFormControl-marginNormal emotion-22"
                        >
                          
                          <div
                            class="MuiFormGroup-root emotion-23"
                            role="radiogroup"
                          >
                            <label
                              class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-24"
                            >
                              <span
                                class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-root MuiRadio-colorPrimary emotion-25"
                              >
                                <input
                                  class="PrivateSwitchBase-input emotion-26"
                                  name="questionType"
                                  type="radio"
                                  value="predefined"
                                />
                                <span
                                  class="emotion-27"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-28"
                                    data-testid="RadioButtonUncheckedIcon"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                                    />
                                  </svg>
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-29"
                                    data-testid="RadioButtonCheckedIcon"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                                    />
                                  </svg>
                                </span>
                              </span>
                              <span
                                class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-30"
                              >
                                Choose a security question
                              </span>
                            </label>
                            <label
                              class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-24"
                            >
                              <span
                                class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary Mui-checked MuiRadio-root MuiRadio-colorPrimary emotion-25"
                              >
                                <input
                                  class="PrivateSwitchBase-input emotion-26"
                                  name="questionType"
                                  type="radio"
                                  value="custom"
                                />
                                <span
                                  class="emotion-27"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-28"
                                    data-testid="RadioButtonUncheckedIcon"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                                    />
                                  </svg>
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-36"
                                    data-testid="RadioButtonCheckedIcon"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                                    />
                                  </svg>
                                </span>
                              </span>
                              <span
                                class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-30"
                              >
                                Create my own security question
                              </span>
                            </label>
                          </div>
                        </fieldset>
                      </div>
                      <div
                        class="MuiBox-root emotion-18"
                      >
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          <label
                            class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-40"
                            data-shrink="false"
                            for="credentials.question"
                          >
                            Create my own security question
                          </label>
                          <div
                            class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-41"
                            required="true"
                          >
                            <input
                              aria-invalid="false"
                              autocomplete="off"
                              class="MuiInputBase-input emotion-42"
                              data-se="credentials.question"
                              id="credentials.question"
                              name="credentials.question"
                              required=""
                              type="text"
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-18"
                      >
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          <label
                            class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-40"
                            data-shrink="false"
                            for="credentials.answer"
                          >
                            Answer
                          </label>
                          <div
                            class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-adornedEnd no-translate emotion-41"
                            required="true"
                          >
                            <input
                              aria-invalid="false"
                              class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-42"
                              data-se="credentials.answer"
                              id="credentials.answer"
                              name="credentials.answer"
                              required=""
                              type="password"
                            />
                            <div
                              class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined emotion-48"
                            >
                              <button
                                aria-controls="credentials.answer"
                                aria-label="Show answer"
                                aria-pressed="false"
                                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium emotion-49"
                                data-mui-internal-clone-element="true"
                                tabindex="0"
                                type="button"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-50"
                                  fill="none"
                                  focusable="false"
                                  viewBox="0 0 16 16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M3.89765 11.5506C2.89626 10.6994 2.04176 9.50056 1.15617 8C2.04176 6.49944 2.89626 5.30062 3.89765 4.44944C4.96916 3.53865 6.24031 3 8 3C9.75969 3 11.0308 3.53865 12.1024 4.44944C13.1037 5.30062 13.9582 6.49944 14.8438 8C13.9582 9.50056 13.1037 10.6994 12.1024 11.5506C11.0308 12.4613 9.75969 13 8 13C6.24031 13 4.96916 12.4613 3.89765 11.5506ZM8 14C12 14 14 11.5 16 8C14 4.5 12 2 8 2C4 2 2 4.5 0 8C2 11.5 4 14 8 14ZM11 8C11 9.65685 9.65685 11 8 11C6.34315 11 5 9.65685 5 8C5 6.34315 6.34315 5 8 5C9.65685 5 11 6.34315 11 8ZM12 8C12 10.2091 10.2091 12 8 12C5.79086 12 4 10.2091 4 8C4 5.79086 5.79086 4 8 4C10.2091 4 12 5.79086 12 8Z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-18"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-52"
                          data-type="save"
                          tabindex="0"
                          type="submit"
                        >
                          Verify
                        </button>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-54"
                        data-se="switchAuthenticator"
                        role="link"
                        type="button"
                      >
                        Return to authenticator list
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-54"
                        data-se="cancel"
                        role="link"
                        type="button"
                      >
                        Back to sign in
                      </button>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`authenticator-enroll-security-question predefined question renders correct form 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="auth-container main-container MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="okta-sign-in-header auth-header authCoinSpacing MuiBox-root emotion-6"
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                />
                <div
                  aria-hidden="true"
                  class="mfa-okta-security-question MuiBox-root emotion-8"
                  data-se="factor-beacon"
                >
                  <svg
                    aria-labelledby="mfa-okta-security-question"
                    fill="none"
                    height="48"
                    role="img"
                    viewBox="0 0 48 48"
                    width="48"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title
                      id="mfa-okta-security-question"
                    >
                      Security Question
                    </title>
                    <circle
                      class="siwFillBg"
                      cx="24"
                      cy="24"
                      fill="#F5F5F6"
                      r="24"
                    />
                    <path
                      class="siwFillSecondary"
                      d="m24.25 39.123-4.615-3.433a21.799 21.799 0 0 1-8.827-16.259l-.329-5.738 12.84-4.534a2.818 2.818 0 0 1 1.862 0l12.84 4.534-.329 5.738a21.8 21.8 0 0 1-8.827 16.259l-4.615 3.433ZM11.521 14.387l.285 4.987a20.811 20.811 0 0 0 8.425 15.514l4.019 2.989 4.019-2.989a20.81 20.81 0 0 0 8.425-15.514l.285-4.987L24.848 10.1a1.792 1.792 0 0 0-1.2 0l-12.127 4.287Z"
                      fill="#A7B5EC"
                    />
                    <path
                      class="siwFillPrimaryDark"
                      d="M29.44 19.729a5.007 5.007 0 0 0-8.846-2.356 4.484 4.484 0 0 0-.827 4.385l.929-.367A3.48 3.48 0 0 1 21.369 18a4.027 4.027 0 1 1 5.244 5.972C25 25 23.5 26.252 23.5 28.528h1c0-1.691 1.058-2.7 2.646-3.707a5.067 5.067 0 0 0 2.294-5.092Zm-5.454 12.246a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5Z"
                      fill="#00297A"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-9"
              >
                <div
                  class="identifier-container MuiBox-root emotion-10"
                >
                  <div
                    class="MuiBox-root emotion-11"
                  >
                    <span
                      class="MuiBox-root emotion-12"
                    >
                      <svg
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-13"
                        fill="none"
                        focusable="false"
                        role="img"
                        viewBox="0 0 16 16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M10 3V5C10 6.10457 9.10457 7 8 7C6.89543 7 6 6.10457 6 5V3C6 1.89543 6.89543 1 8 1C9.10457 1 10 1.89543 10 3ZM5 3C5 1.34315 6.34315 0 8 0C9.65685 0 11 1.34315 11 3V5C11 6.65685 9.65685 8 8 8C6.34315 8 5 6.65685 5 5V3ZM4.1305 10.0742C4.26803 10.0181 4.459 10 5.41376 10H10.5862C11.541 10 11.732 10.0181 11.8695 10.0742C12.0299 10.1398 12.1706 10.2459 12.2777 10.3821C12.3695 10.4989 12.4393 10.6776 12.7016 11.5956L13.6743 15H2.32573L3.29841 11.5956C3.5607 10.6776 3.63054 10.4989 3.72233 10.3821C3.82941 10.2459 3.97006 10.1398 4.1305 10.0742ZM13.6631 11.3209L14.7143 15L15 16H13.96H2.04002H1L1.28571 15L2.33689 11.3209C2.57458 10.489 2.69343 10.073 2.93606 9.76423C3.15022 9.49171 3.43152 9.27953 3.75239 9.14848C4.11592 9 4.54854 9 5.41376 9H10.5862C11.4515 9 11.8841 9 12.2476 9.14848C12.5685 9.27953 12.8498 9.49171 13.0639 9.76423C13.3066 10.073 13.4254 10.489 13.6631 11.3209Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                        <title>
                          User
                        </title>
                      </svg>
                    </span>
                    <span
                      class="identifier no-translate MuiBox-root emotion-14"
                      data-se="identifier"
                      title="tester14@test.com"
                    >
                      tester14@test.com
                    </span>
                  </div>
                </div>
                <form
                  class="o-form MuiBox-root emotion-15"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-16"
                  >
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <div
                        class="MuiBox-root emotion-18"
                      >
                        <div
                          class="MuiBox-root emotion-19"
                        >
                          <h2
                            class="MuiTypography-root MuiTypography-h4 emotion-20"
                            data-se="o-form-head"
                            id="enroll-authenticator_Title_Set_up_security_question_security_question_aut2h3fft3N1BApga1d7_2_1"
                            tabindex="-1"
                          >
                            Set up security question
                          </h2>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-18"
                      >
                        <fieldset
                          class="MuiFormControl-root MuiFormControl-marginNormal emotion-22"
                        >
                          
                          <div
                            class="MuiFormGroup-root emotion-23"
                            role="radiogroup"
                          >
                            <label
                              class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-24"
                            >
                              <span
                                class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary Mui-focusVisible PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary Mui-checked MuiRadio-root MuiRadio-colorPrimary emotion-25"
                              >
                                <input
                                  class="PrivateSwitchBase-input emotion-26"
                                  name="questionType"
                                  type="radio"
                                  value="predefined"
                                />
                                <span
                                  class="emotion-27"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-28"
                                    data-testid="RadioButtonUncheckedIcon"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                                    />
                                  </svg>
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-29"
                                    data-testid="RadioButtonCheckedIcon"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                                    />
                                  </svg>
                                </span>
                              </span>
                              <span
                                class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-30"
                              >
                                Choose a security question
                              </span>
                            </label>
                            <label
                              class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-24"
                            >
                              <span
                                class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-root MuiRadio-colorPrimary emotion-25"
                              >
                                <input
                                  class="PrivateSwitchBase-input emotion-26"
                                  name="questionType"
                                  type="radio"
                                  value="custom"
                                />
                                <span
                                  class="emotion-27"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-28"
                                    data-testid="RadioButtonUncheckedIcon"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                                    />
                                  </svg>
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-36"
                                    data-testid="RadioButtonCheckedIcon"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                                    />
                                  </svg>
                                </span>
                              </span>
                              <span
                                class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-30"
                              >
                                Create my own security question
                              </span>
                            </label>
                          </div>
                        </fieldset>
                      </div>
                      <div
                        class="MuiBox-root emotion-18"
                      >
                        <div
                          class="MuiFormControl-root MuiFormControl-marginNormal emotion-22"
                        >
                          <label
                            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-outlined emotion-40"
                            data-shrink="false"
                            for="credentials.questionKey"
                          >
                            Choose a security question
                          </label>
                          <div
                            class="MuiInputBase-root MuiInput-root MuiInputBase-colorPrimary MuiInputBase-formControl  emotion-41"
                            required="true"
                          >
                            <select
                              aria-invalid="false"
                              class="MuiNativeSelect-select MuiNativeSelect-standard MuiInputBase-input MuiInput-input emotion-42"
                              data-se="credentials.questionKey"
                              id="credentials.questionKey"
                              name="credentials.questionKey"
                              required=""
                            >
                              <option
                                value=""
                              >
                                Select an option
                              </option>
                              <option
                                value="disliked_food"
                              >
                                What is the food you least liked as a child?
                              </option>
                              <option
                                value="name_of_first_plush_toy"
                              >
                                What is the name of your first stuffed animal?
                              </option>
                              <option
                                value="first_award"
                              >
                                What did you earn your first medal or award for?
                              </option>
                              <option
                                value="favorite_security_question"
                              >
                                What is your favorite security question?
                              </option>
                              <option
                                value="favorite_toy"
                              >
                                What is the toy/stuffed animal you liked the most as a kid?
                              </option>
                              <option
                                value="first_computer_game"
                              >
                                What was the first computer game you played?
                              </option>
                              <option
                                value="favorite_movie_quote"
                              >
                                What is your favorite movie quote?
                              </option>
                              <option
                                value="first_sports_team_mascot"
                              >
                                What was the mascot of the first sports team you played on?
                              </option>
                              <option
                                value="first_music_purchase"
                              >
                                What music album or song did you first purchase?
                              </option>
                              <option
                                value="favorite_art_piece"
                              >
                                What is your favorite piece of art?
                              </option>
                              <option
                                value="grandmother_favorite_desert"
                              >
                                What was your grandmother's favorite dessert?
                              </option>
                              <option
                                value="first_thing_cooked"
                              >
                                What was the first thing you learned to cook?
                              </option>
                              <option
                                value="childhood_dream_job"
                              >
                                What was your dream job as a child?
                              </option>
                              <option
                                value="place_where_significant_other_was_met"
                              >
                                Where did you meet your spouse/significant other?
                              </option>
                              <option
                                value="favorite_vacation_location"
                              >
                                Where did you go for your favorite vacation?
                              </option>
                              <option
                                value="new_years_two_thousand"
                              >
                                Where were you on New Year's Eve in the year 2000?
                              </option>
                              <option
                                value="favorite_speaker_actor"
                              >
                                Who is your favorite speaker/orator?
                              </option>
                              <option
                                value="favorite_book_movie_character"
                              >
                                Who is your favorite book/movie character?
                              </option>
                              <option
                                value="favorite_sports_player"
                              >
                                Who is your favorite sports player?
                              </option>
                            </select>
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit MuiNativeSelect-icon MuiNativeSelect-iconStandard emotion-43"
                              data-testid="ArrowDropDownIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M7 10l5 5 5-5z"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-18"
                      >
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          <label
                            class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-46"
                            data-shrink="false"
                            for="credentials.answer"
                          >
                            Answer
                          </label>
                          <div
                            class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-adornedEnd no-translate emotion-47"
                            required="true"
                          >
                            <input
                              aria-invalid="false"
                              autocomplete="off"
                              class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-48"
                              data-se="credentials.answer"
                              id="credentials.answer"
                              name="credentials.answer"
                              required=""
                              type="password"
                            />
                            <div
                              class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined emotion-49"
                            >
                              <button
                                aria-controls="credentials.answer"
                                aria-label="Show answer"
                                aria-pressed="false"
                                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium emotion-50"
                                data-mui-internal-clone-element="true"
                                tabindex="0"
                                type="button"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-51"
                                  fill="none"
                                  focusable="false"
                                  viewBox="0 0 16 16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M3.89765 11.5506C2.89626 10.6994 2.04176 9.50056 1.15617 8C2.04176 6.49944 2.89626 5.30062 3.89765 4.44944C4.96916 3.53865 6.24031 3 8 3C9.75969 3 11.0308 3.53865 12.1024 4.44944C13.1037 5.30062 13.9582 6.49944 14.8438 8C13.9582 9.50056 13.1037 10.6994 12.1024 11.5506C11.0308 12.4613 9.75969 13 8 13C6.24031 13 4.96916 12.4613 3.89765 11.5506ZM8 14C12 14 14 11.5 16 8C14 4.5 12 2 8 2C4 2 2 4.5 0 8C2 11.5 4 14 8 14ZM11 8C11 9.65685 9.65685 11 8 11C6.34315 11 5 9.65685 5 8C5 6.34315 6.34315 5 8 5C9.65685 5 11 6.34315 11 8ZM12 8C12 10.2091 10.2091 12 8 12C5.79086 12 4 10.2091 4 8C4 5.79086 5.79086 4 8 4C10.2091 4 12 5.79086 12 8Z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-18"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-53"
                          data-type="save"
                          tabindex="0"
                          type="submit"
                        >
                          Verify
                        </button>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-55"
                        data-se="switchAuthenticator"
                        role="link"
                        type="button"
                      >
                        Return to authenticator list
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-55"
                        data-se="cancel"
                        role="link"
                        type="button"
                      >
                        Back to sign in
                      </button>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`authenticator-enroll-security-question predefined question should render form without an autoFocused field 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="auth-container main-container MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="okta-sign-in-header auth-header authCoinSpacing MuiBox-root emotion-6"
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                />
                <div
                  aria-hidden="true"
                  class="mfa-okta-security-question MuiBox-root emotion-8"
                  data-se="factor-beacon"
                >
                  <svg
                    aria-labelledby="mfa-okta-security-question"
                    fill="none"
                    height="48"
                    role="img"
                    viewBox="0 0 48 48"
                    width="48"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title
                      id="mfa-okta-security-question"
                    >
                      Security Question
                    </title>
                    <circle
                      class="siwFillBg"
                      cx="24"
                      cy="24"
                      fill="#F5F5F6"
                      r="24"
                    />
                    <path
                      class="siwFillSecondary"
                      d="m24.25 39.123-4.615-3.433a21.799 21.799 0 0 1-8.827-16.259l-.329-5.738 12.84-4.534a2.818 2.818 0 0 1 1.862 0l12.84 4.534-.329 5.738a21.8 21.8 0 0 1-8.827 16.259l-4.615 3.433ZM11.521 14.387l.285 4.987a20.811 20.811 0 0 0 8.425 15.514l4.019 2.989 4.019-2.989a20.81 20.81 0 0 0 8.425-15.514l.285-4.987L24.848 10.1a1.792 1.792 0 0 0-1.2 0l-12.127 4.287Z"
                      fill="#A7B5EC"
                    />
                    <path
                      class="siwFillPrimaryDark"
                      d="M29.44 19.729a5.007 5.007 0 0 0-8.846-2.356 4.484 4.484 0 0 0-.827 4.385l.929-.367A3.48 3.48 0 0 1 21.369 18a4.027 4.027 0 1 1 5.244 5.972C25 25 23.5 26.252 23.5 28.528h1c0-1.691 1.058-2.7 2.646-3.707a5.067 5.067 0 0 0 2.294-5.092Zm-5.454 12.246a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5Z"
                      fill="#00297A"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-9"
              >
                <div
                  class="identifier-container MuiBox-root emotion-10"
                >
                  <div
                    class="MuiBox-root emotion-11"
                  >
                    <span
                      class="MuiBox-root emotion-12"
                    >
                      <svg
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-13"
                        fill="none"
                        focusable="false"
                        role="img"
                        viewBox="0 0 16 16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M10 3V5C10 6.10457 9.10457 7 8 7C6.89543 7 6 6.10457 6 5V3C6 1.89543 6.89543 1 8 1C9.10457 1 10 1.89543 10 3ZM5 3C5 1.34315 6.34315 0 8 0C9.65685 0 11 1.34315 11 3V5C11 6.65685 9.65685 8 8 8C6.34315 8 5 6.65685 5 5V3ZM4.1305 10.0742C4.26803 10.0181 4.459 10 5.41376 10H10.5862C11.541 10 11.732 10.0181 11.8695 10.0742C12.0299 10.1398 12.1706 10.2459 12.2777 10.3821C12.3695 10.4989 12.4393 10.6776 12.7016 11.5956L13.6743 15H2.32573L3.29841 11.5956C3.5607 10.6776 3.63054 10.4989 3.72233 10.3821C3.82941 10.2459 3.97006 10.1398 4.1305 10.0742ZM13.6631 11.3209L14.7143 15L15 16H13.96H2.04002H1L1.28571 15L2.33689 11.3209C2.57458 10.489 2.69343 10.073 2.93606 9.76423C3.15022 9.49171 3.43152 9.27953 3.75239 9.14848C4.11592 9 4.54854 9 5.41376 9H10.5862C11.4515 9 11.8841 9 12.2476 9.14848C12.5685 9.27953 12.8498 9.49171 13.0639 9.76423C13.3066 10.073 13.4254 10.489 13.6631 11.3209Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                        <title>
                          User
                        </title>
                      </svg>
                    </span>
                    <span
                      class="identifier no-translate MuiBox-root emotion-14"
                      data-se="identifier"
                      title="tester14@test.com"
                    >
                      tester14@test.com
                    </span>
                  </div>
                </div>
                <form
                  class="o-form MuiBox-root emotion-15"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-16"
                  >
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <div
                        class="MuiBox-root emotion-18"
                      >
                        <div
                          class="MuiBox-root emotion-19"
                        >
                          <h2
                            class="MuiTypography-root MuiTypography-h4 emotion-20"
                            data-se="o-form-head"
                            id="enroll-authenticator_Title_Set_up_security_question_security_question_aut2h3fft3N1BApga1d7_2_1"
                            tabindex="-1"
                          >
                            Set up security question
                          </h2>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-18"
                      >
                        <fieldset
                          class="MuiFormControl-root MuiFormControl-marginNormal emotion-22"
                        >
                          
                          <div
                            class="MuiFormGroup-root emotion-23"
                            role="radiogroup"
                          >
                            <label
                              class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-24"
                            >
                              <span
                                class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary Mui-checked MuiRadio-root MuiRadio-colorPrimary emotion-25"
                              >
                                <input
                                  class="PrivateSwitchBase-input emotion-26"
                                  name="questionType"
                                  type="radio"
                                  value="predefined"
                                />
                                <span
                                  class="emotion-27"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-28"
                                    data-testid="RadioButtonUncheckedIcon"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                                    />
                                  </svg>
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-29"
                                    data-testid="RadioButtonCheckedIcon"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                                    />
                                  </svg>
                                </span>
                              </span>
                              <span
                                class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-30"
                              >
                                Choose a security question
                              </span>
                            </label>
                            <label
                              class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-24"
                            >
                              <span
                                class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-root MuiRadio-colorPrimary emotion-25"
                              >
                                <input
                                  class="PrivateSwitchBase-input emotion-26"
                                  name="questionType"
                                  type="radio"
                                  value="custom"
                                />
                                <span
                                  class="emotion-27"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-28"
                                    data-testid="RadioButtonUncheckedIcon"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                                    />
                                  </svg>
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-36"
                                    data-testid="RadioButtonCheckedIcon"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                                    />
                                  </svg>
                                </span>
                              </span>
                              <span
                                class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-30"
                              >
                                Create my own security question
                              </span>
                            </label>
                          </div>
                        </fieldset>
                      </div>
                      <div
                        class="MuiBox-root emotion-18"
                      >
                        <div
                          class="MuiFormControl-root MuiFormControl-marginNormal emotion-22"
                        >
                          <label
                            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-outlined emotion-40"
                            data-shrink="false"
                            for="credentials.questionKey"
                          >
                            Choose a security question
                          </label>
                          <div
                            class="MuiInputBase-root MuiInput-root MuiInputBase-colorPrimary MuiInputBase-formControl  emotion-41"
                            required="true"
                          >
                            <select
                              aria-invalid="false"
                              class="MuiNativeSelect-select MuiNativeSelect-standard MuiInputBase-input MuiInput-input emotion-42"
                              data-se="credentials.questionKey"
                              id="credentials.questionKey"
                              name="credentials.questionKey"
                              required=""
                            >
                              <option
                                value=""
                              >
                                Select an option
                              </option>
                              <option
                                value="disliked_food"
                              >
                                What is the food you least liked as a child?
                              </option>
                              <option
                                value="name_of_first_plush_toy"
                              >
                                What is the name of your first stuffed animal?
                              </option>
                              <option
                                value="first_award"
                              >
                                What did you earn your first medal or award for?
                              </option>
                              <option
                                value="favorite_security_question"
                              >
                                What is your favorite security question?
                              </option>
                              <option
                                value="favorite_toy"
                              >
                                What is the toy/stuffed animal you liked the most as a kid?
                              </option>
                              <option
                                value="first_computer_game"
                              >
                                What was the first computer game you played?
                              </option>
                              <option
                                value="favorite_movie_quote"
                              >
                                What is your favorite movie quote?
                              </option>
                              <option
                                value="first_sports_team_mascot"
                              >
                                What was the mascot of the first sports team you played on?
                              </option>
                              <option
                                value="first_music_purchase"
                              >
                                What music album or song did you first purchase?
                              </option>
                              <option
                                value="favorite_art_piece"
                              >
                                What is your favorite piece of art?
                              </option>
                              <option
                                value="grandmother_favorite_desert"
                              >
                                What was your grandmother's favorite dessert?
                              </option>
                              <option
                                value="first_thing_cooked"
                              >
                                What was the first thing you learned to cook?
                              </option>
                              <option
                                value="childhood_dream_job"
                              >
                                What was your dream job as a child?
                              </option>
                              <option
                                value="place_where_significant_other_was_met"
                              >
                                Where did you meet your spouse/significant other?
                              </option>
                              <option
                                value="favorite_vacation_location"
                              >
                                Where did you go for your favorite vacation?
                              </option>
                              <option
                                value="new_years_two_thousand"
                              >
                                Where were you on New Year's Eve in the year 2000?
                              </option>
                              <option
                                value="favorite_speaker_actor"
                              >
                                Who is your favorite speaker/orator?
                              </option>
                              <option
                                value="favorite_book_movie_character"
                              >
                                Who is your favorite book/movie character?
                              </option>
                              <option
                                value="favorite_sports_player"
                              >
                                Who is your favorite sports player?
                              </option>
                            </select>
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit MuiNativeSelect-icon MuiNativeSelect-iconStandard emotion-43"
                              data-testid="ArrowDropDownIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M7 10l5 5 5-5z"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-18"
                      >
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          <label
                            class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-46"
                            data-shrink="false"
                            for="credentials.answer"
                          >
                            Answer
                          </label>
                          <div
                            class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-adornedEnd no-translate emotion-47"
                            required="true"
                          >
                            <input
                              aria-invalid="false"
                              autocomplete="off"
                              class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-48"
                              data-se="credentials.answer"
                              id="credentials.answer"
                              name="credentials.answer"
                              required=""
                              type="password"
                            />
                            <div
                              class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined emotion-49"
                            >
                              <button
                                aria-controls="credentials.answer"
                                aria-label="Show answer"
                                aria-pressed="false"
                                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium emotion-50"
                                data-mui-internal-clone-element="true"
                                tabindex="0"
                                type="button"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-51"
                                  fill="none"
                                  focusable="false"
                                  viewBox="0 0 16 16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M3.89765 11.5506C2.89626 10.6994 2.04176 9.50056 1.15617 8C2.04176 6.49944 2.89626 5.30062 3.89765 4.44944C4.96916 3.53865 6.24031 3 8 3C9.75969 3 11.0308 3.53865 12.1024 4.44944C13.1037 5.30062 13.9582 6.49944 14.8438 8C13.9582 9.50056 13.1037 10.6994 12.1024 11.5506C11.0308 12.4613 9.75969 13 8 13C6.24031 13 4.96916 12.4613 3.89765 11.5506ZM8 14C12 14 14 11.5 16 8C14 4.5 12 2 8 2C4 2 2 4.5 0 8C2 11.5 4 14 8 14ZM11 8C11 9.65685 9.65685 11 8 11C6.34315 11 5 9.65685 5 8C5 6.34315 6.34315 5 8 5C9.65685 5 11 6.34315 11 8ZM12 8C12 10.2091 10.2091 12 8 12C5.79086 12 4 10.2091 4 8C4 5.79086 5.79086 4 8 4C10.2091 4 12 5.79086 12 8Z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-18"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-53"
                          data-type="save"
                          tabindex="0"
                          type="submit"
                        >
                          Verify
                        </button>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-55"
                        data-se="switchAuthenticator"
                        role="link"
                        type="button"
                      >
                        Return to authenticator list
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-55"
                        data-se="cancel"
                        role="link"
                        type="button"
                      >
                        Back to sign in
                      </button>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;
